# SpatiotemporalBlueNoiseSDK

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.docx  License.txt  README.md  STBN.sln  analyzeVVSTBN.py
Libraries/Scalar/: CMakeLists.txt  STBNData.cpp  STBNData.h  STBNMaker.cpp  STBNMaker.h
Libraries/Scalar/Reporting/: ProgressReporter.cpp  ProgressReporter.h
Libraries/Scalar/Utils/: Dimensions.cpp  Dimensions.h  PixelCoords.cpp  PixelCoords.h
Libraries/Scalar/VoidAndCluster/: VCController.cpp  VCController.h  VCImpl.cpp  VCImpl.h  VoidAndCluster.cpp  VoidAndCluster.h
Libraries/Scalar/VoidAndCluster/Reference/: ReferenceController2Dx1Dx1D.cpp  ReferenceController2Dx1Dx1D.h  ReferenceController2Dx2D.cpp  ReferenceController2Dx2D.h  ReferenceFuncs.cpp  ReferenceFuncs.h  ReferenceImpl.cpp  ReferenceImpl.h
Libraries/Scalar/VoidAndCluster/SliceCache/: SliceCacheController2Dx1Dx1D.cpp  SliceCacheController2Dx1Dx1D.h  SliceCacheController2Dx2D.cpp  SliceCacheController2Dx2D.h  SliceCacheImpl.cpp  SliceCacheImpl.h
Libraries/Shared/: BlueNoiseTexturesND.cpp  BlueNoiseTexturesND.h  CMakeLists.txt  ProgressContext.cpp  ProgressContext.h  STBNMath.h  STBNRandom.h
Libraries/Shared/Kernel/: BlueNoiseGaussianKernel.cpp  BlueNoiseGaussianKernel.h  ConstantKernel.cpp  ConstantKernel.h  GaussianKernel.cpp  GaussianKernel.h  SymmetricKernel.cpp  SymmetricKernel.h  VectorBlueNoiseGaussianKernel.cpp  VectorBlueNoiseGaussianKernel.h
Libraries/Vector/: CMakeLists.txt  VectorSTBNArgs.h  VectorSTBNImplSelector.cpp  VectorSTBNImplSelector.h  VectorSTBNMaker.h  VectorSTBNProgressData.h
Libraries/Vector/Debug/: DebugFileExport.cpp  DebugFileExport.h
Libraries/Vector/Exporters/: RGBAExporters.cpp  RGBAExporters.h
Libraries/Vector/ImportanceSampling/: ImportanceSamplingData.h  ImportanceSamplingDataLoaders.cpp  ImportanceSamplingDataLoaders.h
Libraries/Vector/RandomTextureGenerators/: CosineWeightedHemisphereFloat3RandomTextureGenerator.cpp  CosineWeightedHemisphereFloat3RandomTextureGenerator.h  DefaultRandomTextureGenerator.h  ImportanceSampledRandomTextureGenerator.h  ImportanceSampledUnitFloat3RandomTextureGenerator.cpp  ImportanceSampledUnitFloat3RandomTextureGenerator.h  PDFStats.h
Libraries/Vector/RandomTypeGenerators/: Float2RandomGenerators.cpp  Float2RandomGenerators.h  Float3RandomGenerators.cpp  Float3RandomGenerators.h  FloatRandomGenerators.cpp  FloatRandomGenerators.h
Libraries/Vector/Reporting/: ProgressReporter.cpp  ProgressReporter.h
Libraries/Vector/SimulatedAnnealing/: SAData.h  SADataController.h  SAProgressData.h  SimulatedAnnealing.h
Libraries/Vector/Types/: Float.h  Float2.h  Float3.h
Libraries/Vector/Utils/: Dimensions3D.cpp  Dimensions3D.h  PixelCoords3D.cpp  PixelCoords3D.h  SphericalCoordinateMath.cpp  SphericalCoordinateMath.h
Libraries/Vector/ValueDistanceFunctions/: Float2ValueDistanceFunctions.cpp  Float2ValueDistanceFunctions.h  Float3ValueDistanceFunctions.cpp  Float3ValueDistanceFunctions.h  FloatValueDistanceFunctions.cpp  FloatValueDistanceFunctions.h
Scalar/: 2Dx1Dx1D.inl  2Dx2D.inl  Scalar.vcxproj  Scalar.vcxproj.filters  main.cpp
Shared/: Shared.vcxproj  Shared.vcxproj.filters  shared.cpp  shared.h
Shared/pcg/: pcg_basic.c
Support/Tests/ScalarTest/: CMakeLists.txt  STBNDataTest.cpp  ScalarTest.cpp
Support/Tests/ScalarTest/Kernel/: ConstantKernelTest.cpp  GaussianKernelTest.cpp  SymmetricKernelTest.cpp
Support/Tests/ScalarTest/VoidAndCluster/: ReferenceImplTest.cpp  SliceCacheController2Dx1Dx1DTest.cpp  SliceCacheController2Dx2DTest.cpp  SliceCacheImpl2Dx1Dx1DTest.cpp
Support/Tests/VectorTest/: CMakeLists.txt  main.cpp
Support/Tests/VectorTest/ValueDistanceFunctions/: Float2ValueDistanceFunctionsTest.cpp  Float3ValueDistanceFunctionsTest.cpp  FloatValueDistanceFunctionsTest.cpp
Tools/ScalarApp/: CMakeLists.txt  main.cpp
Tools/VectorApp/: CMDOptionsParser.cpp  CMDOptionsParser.h  CMakeLists.txt  VectorProgramOptions.h  main.cpp
Vector/: Make.h  MakeBase.h  Vector.vcxproj  Vector.vcxproj.filters  main.cpp  mossy_forest_1k.hdr
